texture model feature extraction with new grid pars

--- a/notebooks/testing/test_pyramid_feat_ext_new.ipynb
+++ b/notebooks/testing/test_pyramid_feat_ext_new.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "573f6f13",
+   "execution_count": 1,
+   "id": "797c5142",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "7b95e565",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fn = '/user_data/mmhender/features/pyramid_texture/S1_features_each_prf_4ori_4sf_grid4.h5py'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "441bb376",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fn = '/user_data/mmhender/features/alexnet/S1_Conv5_ReLU_features_each_prf_grid4.h5py'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4dde4b79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 70.94946 seconds to load file\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "t = time.time()\n",
+    "batch_inds = np.arange(1000,1001)\n",
+    "with h5py.File(fn, 'r') as data_set:\n",
+    "    values = np.copy(data_set['/features'][:,:,batch_inds])\n",
+    "    data_set.close() \n",
+    "elapsed = time.time() - t\n",
+    "print('Took %.5f seconds to load file'%elapsed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e5092e12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 256, 1)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ac752dd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00000000e+00, 1.26238065e-02, 4.39617559e-02, 2.14897469e-02,\n",
+       "       0.00000000e+00, 5.09646274e-02, 1.01951160e-01, 1.90407547e-04,\n",
+       "       1.76560934e-04, 0.00000000e+00, 2.20475835e-04, 4.34885956e-02,\n",
+       "       8.65452215e-02, 1.68084782e-02, 8.03172588e-03, 6.54592738e-03,\n",
+       "       4.22002450e-02, 2.12633703e-03, 0.00000000e+00, 2.59516248e-03,\n",
+       "       5.88277820e-03, 5.28413709e-03, 1.81361064e-02, 3.59409228e-02,\n",
+       "       2.45756850e-01, 3.02530476e-03, 2.25751754e-03, 0.00000000e+00,\n",
+       "       8.32854025e-03, 6.44728988e-02, 7.99475163e-02, 3.61998342e-02,\n",
+       "       2.05574743e-02, 8.23360495e-03, 1.30478472e-01, 1.58266854e-02,\n",
+       "       3.50907557e-02, 1.19160640e-03, 2.05602255e-02, 3.42900283e-03,\n",
+       "       1.01704165e-01, 1.66608095e-02, 5.36628589e-02, 1.97485819e-01,\n",
+       "       2.84447949e-02, 9.65359733e-02, 3.18494649e-03, 2.03398913e-01,\n",
+       "       7.91865215e-03, 6.52556214e-03, 2.16547213e-02, 2.55204708e-04,\n",
+       "       1.07774772e-01, 2.07323701e-05, 8.16254243e-02, 2.07137309e-05,\n",
+       "       9.96926576e-02, 5.15419804e-02, 1.07083559e-01, 1.35040056e-04,\n",
+       "       1.37540311e-01, 8.94344971e-03, 4.33496051e-02, 1.02394610e-03,\n",
+       "       0.00000000e+00, 1.00932658e-01, 2.20122843e-06, 1.48674801e-01,\n",
+       "       3.21621075e-02, 1.08467641e-04, 0.00000000e+00, 1.71862845e-03,\n",
+       "       5.93795022e-03, 1.50769958e-02, 5.18026645e-05, 3.87927867e-06,\n",
+       "       0.00000000e+00, 8.31870548e-03, 2.64668651e-03, 1.32185891e-01,\n",
+       "       2.33083055e-03, 1.67445824e-01, 5.36736287e-03, 4.77725230e-02,\n",
+       "       7.32293725e-03, 0.00000000e+00, 3.03466502e-03, 1.64735541e-01,\n",
+       "       3.12883407e-04, 1.67692192e-02, 0.00000000e+00, 1.85856000e-02,\n",
+       "       0.00000000e+00, 5.42184263e-02, 0.00000000e+00, 1.47952475e-02,\n",
+       "       1.13104749e-02, 8.42781812e-02, 0.00000000e+00, 3.61266721e-04,\n",
+       "       2.12971140e-02, 1.62263568e-02, 2.03939780e-04, 4.28572893e-02,\n",
+       "       4.03955951e-02, 9.29505154e-02, 3.40300314e-02, 1.30542857e-03,\n",
+       "       5.15754707e-02, 2.96217354e-06, 7.38821167e-04, 6.26662094e-03,\n",
+       "       1.02573903e-02, 1.38673738e-01, 1.73609257e-01, 1.32004516e-02,\n",
+       "       0.00000000e+00, 2.49177963e-02, 4.83770762e-03, 0.00000000e+00,\n",
+       "       3.54828387e-02, 0.00000000e+00, 3.43536562e-03, 5.50850146e-02,\n",
+       "       1.90763310e-01, 4.48296428e-01, 2.57847868e-02, 0.00000000e+00,\n",
+       "       1.38751511e-05, 6.10283110e-03, 0.00000000e+00, 6.82668224e-06,\n",
+       "       3.67157883e-03, 0.00000000e+00, 5.79104722e-02, 1.76095776e-02,\n",
+       "       0.00000000e+00, 0.00000000e+00, 3.77167575e-02, 0.00000000e+00,\n",
+       "       2.28991151e-01, 8.77455994e-03, 1.11988529e-05, 1.90065429e-02,\n",
+       "       7.91823491e-03, 6.31412491e-02, 1.05194584e-03, 0.00000000e+00,\n",
+       "       0.00000000e+00, 1.05358571e-01, 7.26355938e-03, 2.83495476e-03,\n",
+       "       6.22632913e-02, 6.80368626e-03, 4.31460589e-02, 9.21552419e-06,\n",
+       "       4.69618179e-02, 0.00000000e+00, 4.83866110e-02, 1.63201665e-04,\n",
+       "       0.00000000e+00, 2.00596894e-03, 1.60488598e-02, 0.00000000e+00,\n",
+       "       6.64132386e-02, 1.95318218e-02, 8.01119546e-04, 5.78252366e-03,\n",
+       "       2.82065868e-02, 1.46117294e-02, 0.00000000e+00, 4.66031581e-03,\n",
+       "       8.13746229e-02, 0.00000000e+00, 6.75597461e-03, 2.25131121e-02,\n",
+       "       1.77223865e-06, 2.51757540e-03, 4.87014404e-05, 2.63292782e-06,\n",
+       "       0.00000000e+00, 1.16035752e-02, 6.70040725e-03, 2.06476692e-02,\n",
+       "       1.52805848e-02, 3.05150934e-02, 1.91123672e-06, 2.43590330e-03,\n",
+       "       1.52430339e-02, 9.68675315e-02, 0.00000000e+00, 8.35750327e-02,\n",
+       "       1.77479163e-03, 0.00000000e+00, 4.11907323e-02, 4.10182402e-04,\n",
+       "       0.00000000e+00, 5.41040637e-02, 7.15195909e-02, 5.73442224e-03,\n",
+       "       2.43315130e-01, 3.93809378e-01, 0.00000000e+00, 1.30711351e-05,\n",
+       "       1.40824290e-02, 8.50636698e-03, 7.13734329e-03, 1.41244473e-05,\n",
+       "       0.00000000e+00, 1.01541076e-02, 1.29545867e-01, 1.37445247e-02,\n",
+       "       2.73809228e-02, 7.51311973e-06, 1.26590908e-01, 8.68407544e-03,\n",
+       "       4.16117022e-03, 3.18012782e-03, 7.45598320e-03, 0.00000000e+00,\n",
+       "       7.10162800e-03, 1.50077813e-03, 3.31307785e-03, 2.30585262e-02,\n",
+       "       2.51464602e-02, 3.75015549e-02, 9.88316387e-02, 2.98713741e-04,\n",
+       "       7.04055205e-02, 0.00000000e+00, 8.82232189e-02, 5.41695720e-03,\n",
+       "       5.01511199e-03, 5.75827414e-07, 2.89799506e-03, 1.04090846e-04,\n",
+       "       3.48616368e-03, 2.97909584e-02, 1.88928645e-03, 3.81737994e-03,\n",
+       "       3.02152280e-02, 3.69750373e-02, 0.00000000e+00, 1.08273709e-02,\n",
+       "       5.86055405e-03, 3.02887447e-02, 1.47278234e-02, 0.00000000e+00,\n",
+       "       2.37449873e-02, 6.27316695e-05, 2.49540716e-01, 2.44389340e-01,\n",
+       "       4.52150765e-04, 5.82772307e-02, 3.43874507e-02, 0.00000000e+00])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values[0,:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
-   "id": "73ca9e8d",
+   "id": "baf8c028",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c5b026b5",
+   "id": "c26e4b1f",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0c7bae22",
+   "id": "9fd01ebd",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "84bdd180",
+   "id": "e4f226e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "88cae9d5",
+   "id": "7b2857dc",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c9ac353a",
+   "id": "4793182c",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1c1e1582",
+   "id": "cdbadbad",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4f073f46",
+   "id": "c9870d86",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "4ba00347",
+   "id": "0b5d5e05",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "574e22e8",
+   "id": "91dd669b",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "4f0df5f2",
+   "id": "85f35a54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "cec6e9ea",
+   "id": "20f26e7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "b2313c43",
+   "id": "19001570",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "254b8291",
+   "id": "91dbd61a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "08626650",
+   "id": "2ca71117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "cf2c49e3",
+   "id": "22012939",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "49732829",
+   "id": "e77839a1",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "e63f267d",
+   "id": "2f42348e",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "c5e0b3e0",
+   "id": "3ba0b65b",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "465333c2",
+   "id": "9681ed00",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "7bf2ac2b",
+   "id": "670d6701",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "da0b7653",
+   "id": "6a8c8ce7",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "9260634c",
+   "id": "bb2bb253",
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "6675eaaa",
+   "id": "8edca308",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "fa907004",
+   "id": "95896401",
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b01f756b",
+   "id": "e46b5af4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -708,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0bfbb118",
+   "id": "82999d9b",
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f1b5217a",
+   "id": "bc5010f7",
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9d60ead4",
+   "id": "668911ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "5f7c4d96",
+   "id": "7f450048",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "10ef39a5",
+   "id": "d658304c",
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d3ab380d",
+   "id": "47ab76ce",
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "5b8ed284",
+   "id": "14f81f70",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ead5d2e4",
+   "id": "90974606",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -925,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9099743d",
+   "id": "70b7f0b0",
    "metadata": {},
    "outputs": [],
    "source": [
