testing analyses for spatial information

--- a/notebooks/plot_results/prf_stability.ipynb
+++ b/notebooks/plot_results/prf_stability.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "fbd80ce6",
+   "execution_count": 2,
+   "id": "da805995",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d15b7300",
+   "execution_count": 3,
+   "id": "afb5dbca",
    "metadata": {},
    "outputs": [
     {
@@ -69,8 +69,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "52c9a657",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(875, 3)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out2['models'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "id": "04b6c7f4",
+   "id": "d7610795",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7f64483f",
+   "id": "7af79ed5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "186ff468",
+   "id": "a143df31",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1ce772de",
+   "id": "7c4a1744",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "826edef1",
+   "id": "81273b14",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a99b558f",
+   "id": "da879572",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "b77bf97f",
+   "id": "eb1460f8",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "08015995",
+   "id": "55455543",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "68dedfc0",
+   "id": "cbea04ce",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "998c5c78",
+   "id": "ffbde492",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "6cab7531",
+   "id": "ff7c4d48",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c2b08b63",
+   "id": "e4e25b8f",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4bc9717f",
+   "id": "15e93fc9",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "38e02f21",
+   "id": "2a0e8e57",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0bd420a2",
+   "id": "3fcf5fa8",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1188a21e",
+   "id": "42d02feb",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2a26d742",
+   "id": "f3b72177",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a2a15beb",
+   "id": "02b63238",
    "metadata": {
     "tags": []
    },
@@ -490,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5c24e05d",
+   "id": "dca33c04",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f8286439",
+   "id": "b704f868",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b452d3a0",
+   "id": "87c50d9d",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "df7b7f04",
+   "id": "34737974",
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ec65374b",
+   "id": "2bbc0248",
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6a36ff64",
+   "id": "1f413fcf",
    "metadata": {},
    "outputs": [
     {
