--- a/notebooks/plot_results/plot_alexnet.ipynb
+++ b/notebooks/plot_results/plot_alexnet.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a3ded190",
+   "execution_count": 1,
+   "id": "f28f646a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,15 +30,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "1488e201",
+   "execution_count": 16,
+   "id": "502b85ab",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading from /user_data/mmhender/imStat/model_fits/S01/alexnet_all_conv/Oct-22-2021_2111_15/all_fit_params\n",
+      "number of pRFs: 1114\n",
+      "most extreme RF positions:\n",
+      "[-0.55 -0.55  0.04]\n",
+      "[ 0.  0. 10.]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1114, 3)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from model_fitting import initialize_fitting\n",
+    "# Params for the spatial aspect of the model (possible pRFs)\n",
+    "aperture_rf_range = 1.1\n",
+    "which_prf_grid=2\n",
+    "aperture, models = initialize_fitting.get_prf_models(aperture_rf_range=aperture_rf_range, \\\n",
+    "                                                     which_grid=which_prf_grid) \n",
+    "\n",
+    "models.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "52b01991",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading from /user_data/mmhender/imStat/model_fits/S01/alexnet_Conv5/Oct-24-2021_1712_01/all_fit_params\n",
       "\n",
       "dict_keys(['subject', 'volume_space', 'fitting_type', 'fitting_type2', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'aperture', 'aperture_rf_range', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'zscore_in_groups', 'ridge', 'debug', 'up_to_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'alexnet_layer_name'])\n",
       "subject = 1\n",
@@ -52,23 +90,23 @@
       "voxel_ncsnr: shape (699192,)\n",
       "aperture = 1.0\n",
       "aperture_rf_range = 1.1\n",
-      "models: shape (875, 3)\n",
-      "best_losses: shape (19738, 11)\n",
-      "best_lambdas: shape (19738, 11)\n",
+      "models: shape (1114, 3)\n",
+      "best_losses: shape (19738, 1)\n",
+      "best_lambdas: shape (19738, 1)\n",
       "best_params: len 6\n",
       "lambdas: shape (9,)\n",
-      "val_cc: shape (19738, 11)\n",
-      "val_r2: shape (19738, 11)\n",
-      "partial_masks: shape (11, 1152)\n",
-      "partial_version_names: len 11\n",
+      "val_cc: shape (19738, 1)\n",
+      "val_r2: shape (19738, 1)\n",
+      "partial_masks: shape (1, 256)\n",
+      "partial_version_names: len 1\n",
       "zscore_features = True\n",
       "zscore_in_groups = False\n",
       "ridge = True\n",
       "debug = 0\n",
       "up_to_sess = 40\n",
-      "shuff_rnd_seed = 222122\n",
+      "shuff_rnd_seed = 221724\n",
       "use_precomputed_prfs = False\n",
-      "alexnet_layer_name = all_conv\n"
+      "alexnet_layer_name = Conv5_ReLU\n"
      ]
     }
    ],
@@ -77,12 +115,12 @@
     "\n",
     "subject = 1\n",
     "volume_space=True\n",
-    "# fitting_type = 'alexnet_Conv1'\n",
-    "fitting_type = 'alexnet_all_conv'\n",
+    "fitting_type = 'alexnet_Conv5'\n",
+    "# fitting_type = 'alexnet_all_conv'\n",
     "\n",
     "root = os.path.dirname(os.path.dirname(os.getcwd()))\n",
     "out, fig_save_folder = load_fits.load_fit_results(subject, volume_space, fitting_type, \\\n",
-    "                                                  n_from_end=1, root=root, verbose=True);\n",
+    "                                                  n_from_end=0, root=root, verbose=True);\n",
     "load_fits.print_output_summary(out)\n",
     "\n",
     "if not os.path.exists(fig_save_folder):\n",
@@ -91,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "13fef79b",
+   "execution_count": 11,
+   "id": "2fc3fe41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,8 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "66fcbd23",
+   "execution_count": 12,
+   "id": "e080f62f",
    "metadata": {},
    "outputs": [
     {
@@ -117,24 +155,6 @@
       "Data is in 3d volume space\n",
       "navigate browser to: 127.0.0.1:33333\n",
       "Started server on port 33333\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-6ca2d95d6302>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m33333\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m summary_plots.plot_summary_pycortex(out=out, subject=subject, fitting_type=fitting_type, \\\n\u001b[0;32m----> 3\u001b[0;31m                                 port=port, roi_def=roi_def)\n\u001b[0m",
-      "\u001b[0;32m/user_data/mmhender/imStat/code/plotting/summary_plots.py\u001b[0m in \u001b[0;36mplot_summary_pycortex\u001b[0;34m(subject, fitting_type, out, port, roi_def)\u001b[0m\n\u001b[1;32m     96\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m     plot_utils.plot_maps_pycortex(maps, names, subject, out, fitting_type, port, roi_def=roi_def, \\\n\u001b[0;32m---> 98\u001b[0;31m                        mins=mins, maxes=maxes, cmaps=cmaps)\n\u001b[0m\u001b[1;32m     99\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m def plot_fit_summary_volume_space(subject, fitting_type, out, roi_def=None, screen_eccen_deg = 8.4, \\\n",
-      "\u001b[0;32m/user_data/mmhender/imStat/code/plotting/plot_utils.py\u001b[0m in \u001b[0;36mplot_maps_pycortex\u001b[0;34m(maps, names, subject, out, fitting_type, port, vox2plot, roi_def, mins, maxes, cmaps)\u001b[0m\n\u001b[1;32m    137\u001b[0m     \u001b[0moverlay_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'overlays.svg'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    138\u001b[0m     cortex.webshow(dat2plot, open_browser=True, port=port, title = 'S%02d, %s'%(subject, fitting_type), overlay_file=overlay_file, \\\n\u001b[0;32m--> 139\u001b[0;31m                   overlays_visible=('rois', 'sulci'))\n\u001b[0m\u001b[1;32m    140\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    141\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/myenv/lib/python3.7/site-packages/cortex/utils.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_load\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/myenv/lib/python3.7/site-packages/cortex/webgl/view.py\u001b[0m in \u001b[0;36mshow\u001b[0;34m(data, types, recache, cmap, layout, autoclose, open_browser, port, pickerfun, template, overlays_available, overlays_visible, labels_visible, overlay_file, title, **kwargs)\u001b[0m\n\u001b[1;32m    821\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mopen_browser\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    822\u001b[0m         \u001b[0mwebbrowser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 823\u001b[0;31m         \u001b[0mclient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mserver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_client\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    824\u001b[0m         \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mserver\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mserver\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    825\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/myenv/lib/python3.7/site-packages/cortex/webgl/view.py\u001b[0m in \u001b[0;36mget_client\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    797\u001b[0m         \u001b[0mdisconnect_on_close\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mautoclose\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    798\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mget_client\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 799\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    800\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    801\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mJSMixer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"window.viewer\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.7/threading.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    550\u001b[0m             \u001b[0msignaled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_flag\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    551\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0msignaled\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 552\u001b[0;31m                 \u001b[0msignaled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cond\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    553\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0msignaled\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    554\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.7/threading.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    294\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m    \u001b[0;31m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    295\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtimeout\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 296\u001b[0;31m                 \u001b[0mwaiter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    297\u001b[0m                 \u001b[0mgotit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    298\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -147,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dccbe90f",
+   "id": "2d8ca34d",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a555b8c9",
+   "id": "0364c1b5",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b5ad588f",
+   "id": "f10a7fd9",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1dfb1475",
+   "id": "6d2c4a20",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2ee50f46",
+   "id": "b416c34f",
    "metadata": {
     "tags": []
    },
@@ -329,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bba06561",
+   "id": "4dd8d0a8",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1742691e",
+   "id": "09b79bec",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "801b36c2",
+   "id": "7af6449e",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ec02e9cf",
+   "id": "484b6ec8",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "cbc98d66",
+   "id": "67ea5ae4",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d80ee94",
+   "id": "87f9757f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d7ec1165",
+   "id": "990bb419",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f514b43f",
+   "id": "74fe9f15",
    "metadata": {},
    "outputs": [
     {
