--- a/notebooks/plot_results/plot_alexnet_plus_sketch_tokens.ipynb
+++ b/notebooks/plot_results/plot_alexnet_plus_sketch_tokens.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "391e58c4",
+   "execution_count": 1,
+   "id": "c745df28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "c25005d0",
+   "execution_count": 3,
+   "id": "7bff1359",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,8 @@
     "nn = [0,0,0,0,1]\n",
     "for fi,ft in enumerate(fitting_types):\n",
     "\n",
-    "    out, fig_save_folder = load_fits.load_fit_results(subject, volume_space, ft, n_from_end=nn[fi], root=root, verbose=True);\n",
+    "    out, fig_save_folder = load_fits.load_fit_results(subject, volume_space, \\\n",
+    "                                      ft, n_from_end=nn[fi], root=root, verbose=True);\n",
     "#     load_fits.print_output_summary(out)\n",
     "    outs.append(out)\n",
     "    \n",
@@ -77,8 +78,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "1f94242c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(875, 3)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outs[4]['models'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
-   "id": "08dc04e2",
+   "id": "80cb9f74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ccd0dbb2",
+   "id": "c150e3d5",
    "metadata": {
     "tags": []
    },
@@ -170,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "adc0668c",
+   "id": "9646850d",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b61f90f9",
+   "id": "8f5dd486",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "dd2ea412",
+   "id": "55ef1a29",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93de82d9",
+   "id": "4bf7b36b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -286,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0bbf371d",
+   "id": "ddbb1c48",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8c43df1f",
+   "id": "15938993",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8451475f",
+   "id": "4d1794ad",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9c455a94",
+   "id": "86d3e8e5",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a025ce44",
+   "id": "23ed9a74",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4788ac15",
+   "id": "c0b6973a",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "997aac65",
+   "id": "166777e1",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ddf59818",
+   "id": "69b48a71",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a62800d3",
+   "id": "6a12a6e6",
    "metadata": {},
    "outputs": [
     {
