changes to notebooks/plotting code

--- a/notebooks/plot_results/st_feat_analysis.ipynb
+++ b/notebooks/plot_results/st_feat_analysis.ipynb
@@ -2,104 +2,100 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a0fbe593",
+   "execution_count": 1,
+   "id": "2831c2ce",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, sys\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "sys.path.append('/user_data/mmhender/imStat/code/')\n",
-    "from utils import stats_utils"
+    "sys.path.append('/user_data/mmhender/imStat/code/')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "83526c2f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.io import loadmat\n",
-    "cluster_fn = os.path.join('/user_data/mmhender/toolboxes/SketchTokens/', 'clusters.mat')\n",
-    "clust = loadmat(cluster_fn)\n",
-    "feature_ims = clust['clusters']['clusters'][0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "a0d8ccf8",
+   "execution_count": 17,
+   "id": "f561aea5",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/mmhender/myenv/lib/python3.7/site-packages/ipykernel_launcher.py:13: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  del sys.path[0]\n",
-      "/home/mmhender/myenv/lib/python3.7/site-packages/ipykernel_launcher.py:16: RuntimeWarning: invalid value encountered in remainder\n",
-      "  app.launch_new_instance()\n"
+      "/home/mmhender/myenv/lib/python3.7/site-packages/ipykernel_launcher.py:17: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/home/mmhender/myenv/lib/python3.7/site-packages/ipykernel_launcher.py:19: RuntimeWarning: invalid value encountered in remainder\n"
      ]
     }
    ],
    "source": [
+    "from scipy.io import loadmat\n",
+    "from utils import stats_utils\n",
+    "cluster_fn = os.path.join('/user_data/mmhender/toolboxes/SketchTokens/', 'clusters.mat')\n",
+    "clust = loadmat(cluster_fn)\n",
+    "feature_ims = clust['clusters']['clusters'][0][0]\n",
+    "\n",
     "# Measuring approximate orientation of each sketch token feature, \n",
     "# based on simple filter in FFT space\n",
     "\n",
     "orient_meas = np.arange(0,180,5)\n",
-    "# rect_orient_meas = np.arange(0,90,5)\n",
     "n_features = feature_ims.shape[2]\n",
     "orient_activs = np.zeros((n_features, len(orient_meas)))\n",
-    "# recti_activs = np.zeros((n_features, len(rect_orient_meas)))\n",
     "\n",
     "n_pix = feature_ims.shape[0]\n",
     "xx,yy = np.meshgrid(np.linspace(-1,1,n_pix), np.linspace(-1,1,n_pix))\n",
     "rr = np.sqrt((xx)**2 + (yy)**2)\n",
     "angle = np.arccos(xx/rr)\n",
-    "# angle[yy<0] = np.pi+(np.pi - angle[yy<0])\n",
     "angle[yy>0] = np.pi - angle[yy>0]\n",
     "angle = np.mod(angle+np.pi/2, np.pi)\n",
-    "# angle[rr==0] = np.nan\n",
     "angle[np.isnan(angle)] = 0\n",
     "angle = angle/np.pi*180\n",
-    "# angle = np.mod(angle+90, 360)\n",
+    "\n",
     "vm_conc = 10 # control precision of orientation filter\n",
     "orient_filters = np.array([stats_utils.von_mises_deg(angle,mu=oo,k=vm_conc,normalize=True) \\\n",
     "                           for oo in orient_meas])\n",
-    "\n",
-    "# orient_filters = np.array([(np.abs(angle-oo)<5) | (np.abs(angle-(oo+180))<5) \\\n",
-    "#                            for oo in orient_meas])\n",
-    "\n",
-    "# recti_filters = np.array([(np.abs(angle-oo)<5) | (np.abs(angle-(oo+180))<5) | \\\n",
-    "#                           (np.abs(angle-(90+oo))<5) | (np.abs(angle-(oo+270))<5)\n",
-    "#                            for oo in rect_orient_meas])\n",
-    "\n",
     "for ff in range(n_features):\n",
     "    im_fft = np.fft.fftshift(np.fft.fft2(feature_ims[:,:,ff]))   \n",
     "    orient_activs[ff,:] = np.tensordot(orient_filters, np.abs(im_fft))\n",
-    "#     recti_activs[ff,:] = np.tensordot(recti_filters, np.abs(im_fft))\n",
     "    \n",
     "max_orient = orient_meas[np.argmax(orient_activs, axis=1)]\n",
-    "max_orient_activ = np.max(orient_activs, axis=1)\n",
-    "# max_recti_orient = rect_orient_meas[np.argmax(recti_activs, axis=1)]\n",
-    "# max_recti_activ = np.max(recti_activs, axis=1)"
+    "max_orient_activ = np.max(orient_activs, axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "710af742",
+   "execution_count": 16,
+   "id": "f2a33036",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7fc5fd48c978>"
+       "True"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.any(np.isnan(angle))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d05fbeac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.QuadMesh at 0x7fca2a7fbb00>"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -123,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "2c226eab",
+   "execution_count": 5,
+   "id": "cfb3d843",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e37df042",
+   "id": "3c3df1a4",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "70d223d2",
+   "id": "6dfbd9d2",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "234d40a4",
+   "id": "79847016",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "996fe519",
+   "id": "4f2641fa",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5682f099",
+   "id": "52efc158",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3c449272",
+   "id": "621b30fd",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "15da25ae",
+   "id": "6b635b86",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0f826fc1",
+   "id": "7302b853",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "a5267d05",
+   "id": "915d51d7",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ae80fa47",
+   "id": "eb5e5816",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6c02780",
+   "id": "d3fafe88",
    "metadata": {},
    "outputs": [],
    "source": []
