updating plotting code

--- a/notebooks/plot_results/prf_stability.ipynb
+++ b/notebooks/plot_results/prf_stability.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6f5467fe",
+   "id": "4b9b99bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,28 +29,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "2d50b00a",
+   "execution_count": 2,
+   "id": "0ae64902",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading from /user_data/mmhender/imStat/model_fits/S01/alexnet_all_conv/Nov-01-2021_2240_40/all_fit_params\n",
+      "loading from /user_data/mmhender/imStat/model_fits/S01/sketch_tokens/Nov-07-2021_2020_59/all_fit_params\n",
       "\n",
-      "dict_keys(['subject', 'volume_space', 'fitting_type', 'fitting_type2', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'aperture', 'aperture_rf_range', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'zscore_in_groups', 'ridge', 'debug', 'up_to_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'alexnet_layer_name', 'alexnet_padding_mode'])\n",
-      "3\n",
-      "40\n",
-      "reflect\n",
-      "\n",
-      "\n",
-      "loading from /user_data/mmhender/imStat/model_fits/S01/alexnet_all_conv/Nov-04-2021_0512_54/all_fit_params\n",
-      "\n",
-      "dict_keys(['subject', 'volume_space', 'fitting_type', 'fitting_type2', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'aperture', 'aperture_rf_range', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'zscore_in_groups', 'ridge', 'debug', 'up_to_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'alexnet_layer_name', 'alexnet_padding_mode'])\n",
+      "dict_keys(['subject', 'volume_space', 'fitting_type', 'fitting_type2', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'aperture', 'aperture_rf_range', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'zscore_in_groups', 'ridge', 'debug', 'up_to_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'corr_each_feature', 'discrim_each_axis', 'min_pct_var', 'max_pc_to_retain', 'use_pca_st_feats', 'use_lda_st_feats', 'lda_discrim_type'])\n",
       "4\n",
-      "40\n",
-      "reflect\n"
+      "20\n",
+      "\n",
+      "\n",
+      "loading from /user_data/mmhender/imStat/model_fits/S01/sketch_tokens/Nov-11-2021_1659_27/all_fit_params\n",
+      "\n",
+      "dict_keys(['subject', 'volume_space', 'fitting_type', 'fitting_type2', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'aperture', 'aperture_rf_range', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'zscore_in_groups', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'corr_each_feature', 'min_pct_var', 'max_pc_to_retain', 'use_pca_st_feats', 'use_lda_st_feats', 'lda_discrim_type'])\n",
+      "5\n",
+      "20\n"
      ]
     }
    ],
@@ -61,12 +59,13 @@
     "# fitting_type2='texture_pyramid_ridge_4ori_4sf'\n",
     "# nf=[0,1]\n",
     "\n",
-    "fitting_type1 = 'alexnet_all_conv'\n",
-    "fitting_type2 = 'alexnet_all_conv'\n",
-    "nf = [2,0]\n",
+    "# fitting_type1 = 'alexnet_all_conv'\n",
+    "# fitting_type2 = 'alexnet_all_conv'\n",
+    "# nf = [2,0]\n",
     "\n",
-    "# fitting_type1 = 'sketch_tokens'\n",
-    "# fitting_type2 = 'sketch_tokens'\n",
+    "fitting_type1 = 'sketch_tokens'\n",
+    "fitting_type2 = 'sketch_tokens'\n",
+    "nf = [4,1]\n",
     "# nf = [2,1]\n",
     "# nf = [1,0]\n",
     "\n",
@@ -99,10 +98,11 @@
     "\n",
     "# fitting_type1 = 'sketch tokens, rect grid'\n",
     "# fitting_type2 = 'sketch tokens, rect grid'\n",
-    "# fitting_type2 = 'sketch tokens, polar grid'\n",
+    "fitting_type1 = 'sketch tokens, polar grid (4)'\n",
+    "fitting_type2 = 'sketch tokens, polar grid (5)'\n",
     "\n",
-    "fitting_type1 = 'alexnet rect grid'\n",
-    "fitting_type2 = 'alexnet polar grid'\n",
+    "# fitting_type1 = 'alexnet rect grid'\n",
+    "# fitting_type2 = 'alexnet polar grid'\n",
     "\n",
     "# fitting_type1 = 'texture pyramid, rect grid'\n",
     "# fitting_type2 = 'texture pyramid, polar grid'\n",
@@ -113,17 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "f9e0bf89",
+   "execution_count": 3,
+   "id": "1b64f8d7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.0, 11.759999]\n",
-      "[nan, nan]\n",
-      "[0.33599997, 8.4]\n"
+      "[2.3314682e-16, 6.9999995]\n",
+      "[0.0, 337.5]\n",
+      "[0.16799998, 8.4]\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "74a829e9",
+   "id": "e70eabcb",
    "metadata": {},
    "outputs": [
     {
@@ -163,40 +163,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "dafd6c46",
+   "execution_count": 4,
+   "id": "d70adfbe",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alexnet rect grid versus mapping task\n",
+      "sketch tokens, polar grid (4) versus mapping task\n",
       "Correlation of param across all ROIs, voxels with R2>0.10\n",
       "ecc\n",
-      "0.36660412865668013\n",
+      "0.4507914239232611\n",
       "angle\n",
-      "0.6811082265274774\n",
+      "0.6439745531851643\n",
       "size\n",
-      "0.12215602158344686\n",
+      "0.47896033897505175\n",
       "\n",
-      "alexnet polar grid versus mapping task\n",
+      "sketch tokens, polar grid (5) versus mapping task\n",
       "Correlation of param across all ROIs, voxels with R2>0.10\n",
       "ecc\n",
-      "0.37267650581089523\n",
+      "0.45924430077343353\n",
       "angle\n",
-      "0.5989599693194751\n",
+      "0.5910405810963633\n",
       "size\n",
-      "0.3643024236514565\n",
+      "0.4286307081762307\n",
       "\n",
-      "alexnet rect grid versus alexnet polar grid\n",
+      "sketch tokens, polar grid (4) versus sketch tokens, polar grid (5)\n",
       "Correlation of param across all ROIs, voxels with R2>0.10\n",
       "ecc\n",
-      "0.7675992365092593\n",
+      "0.7554052192033295\n",
       "angle\n",
-      "0.7782443261284548\n",
+      "0.7456512838048758\n",
       "size\n",
-      "0.39265647764993605\n"
+      "0.7082048909575693\n"
      ]
     }
    ],
@@ -252,8 +252,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "5e4a87cf",
+   "execution_count": 5,
+   "id": "fd9550c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,8 +267,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "15d753c1",
+   "execution_count": 6,
+   "id": "3cfe3c28",
    "metadata": {
     "tags": []
    },
@@ -278,14 +278,15 @@
      "output_type": "stream",
      "text": [
       "Data is in 3d volume space\n",
-      "navigate browser to: 127.0.0.1:33335\n",
-      "Started server on port 33335\n"
+      "navigate browser to: 127.0.0.1:33333\n",
+      "Started server on port 33333\n",
+      "Stopping server\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "port=33335\n",
+    "port=33333\n",
     "\n",
     "vox2plot = (out1['val_r2'][:,0]>0) & (rsq_mapping>0)\n",
     "\n",
@@ -324,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1b5f0a3b",
+   "id": "3ec79f6f",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7f4b226e",
+   "id": "da9cf8bb",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f1928644",
+   "id": "e3cdf49f",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a56fd4b1",
+   "id": "04f9c6f7",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a4686f75",
+   "id": "f319039b",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "948f6f24",
+   "id": "d8c4d70b",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "14f23b3a",
+   "id": "abe5066a",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3486df10",
+   "id": "0aa9afbc",
    "metadata": {},
    "outputs": [
     {
