updating plotting code

--- a/notebooks/plot_results/compare_semantic_discrim.ipynb
+++ b/notebooks/plot_results/compare_semantic_discrim.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "33ec89f9",
+   "execution_count": 14,
+   "id": "c2246a17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "784c9e53",
+   "execution_count": 15,
+   "id": "a647bb46",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
       "dict_keys(['subject', 'volume_space', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'debug', 'up_to_sess', 'single_sess', 'prf_fit_filename', 'discrim_each_axis'])\n",
       "loading from /user_data/mmhender/imStat/model_fits/S01/sketch_tokens/Nov-11-2021_1659_27/all_fit_params\n",
       "\n",
-      "dict_keys(['subject', 'volume_space', 'fitting_type', 'fitting_type2', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'aperture', 'aperture_rf_range', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'zscore_in_groups', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'corr_each_feature', 'discrim_each_axis', 'min_pct_var', 'max_pc_to_retain', 'use_pca_st_feats', 'use_lda_st_feats', 'lda_discrim_type'])\n"
+      "dict_keys(['subject', 'volume_space', 'fitting_type', 'fitting_type2', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'aperture', 'aperture_rf_range', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'zscore_in_groups', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'corr_each_feature', 'discrim_each_axis', 'val_voxel_data', 'val_voxel_data_pred', 'val_stim_data', 'min_pct_var', 'max_pc_to_retain', 'use_pca_st_feats', 'use_lda_st_feats', 'lda_discrim_type'])\n"
      ]
     }
    ],
@@ -69,29 +69,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0c85a50f",
+   "execution_count": 17,
+   "id": "b3a9d0e5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "40"
+       "array([625, 665, 611, ..., 590, 610, 285], dtype=uint16)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "outlist[0]['up_to_sess']"
+    "outlist[1]['val_stim_data']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4aa3e948",
+   "id": "6f7a1d4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b029fb78",
+   "id": "af83b925",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4914b6c2",
+   "id": "5a3703f2",
    "metadata": {},
    "outputs": [
     {
