--- a/notebooks/testing/test_feat_saved.ipynb
+++ b/notebooks/testing/test_feat_saved.ipynb
@@ -2,8 +2,216 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "2d0180c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "import time\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d3c7322b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('/user_data/mmhender/imStat/code')\n",
+    "from utils import default_paths, torch_utils\n",
+    "alexnet_feat_path = default_paths.alexnet_feat_path\n",
+    "from feature_extraction import extract_alexnet_features\n",
+    "alexnet_layer_names  = extract_alexnet_features.alexnet_layer_names\n",
+    "n_features_each_layer = extract_alexnet_features.n_features_each_layer\n",
+    "n_features_each_conv_layer = np.array(n_features_each_layer)[[0,3,6,8,10]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "284a53cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "256"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layer_name = 'Conv5_ReLU'\n",
+    "layer_ind = np.where([layer_name==a for a in alexnet_layer_names])[0][0]\n",
+    "n_features = n_features_each_layer[layer_ind]\n",
+    "n_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8888ebfe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fefd9b2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 64, 192, 384, 256, 256])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_features_each_conv_layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2663bc3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thing = np.load('/user_data/mmhender/features/alexnet/PCA/S1_Conv5_ReLU_reflect_PCA_grid5.npy', allow_pickle=True).item()\n",
+    "len(thing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "0240ea74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10.65921018,  9.12704504,  6.82578433,  5.86768018,  4.10458271,\n",
+       "        3.77086435,  2.94552876,  2.77036935,  2.54095377,  2.25131669,\n",
+       "        2.15204078,  2.09023986,  1.88605626,  1.78459746,  1.60203153,\n",
+       "        1.56450253,  1.40537405,  1.32529805,  1.21248032,  1.1808592 ,\n",
+       "        1.16631347,  1.02679477,  0.94018071,  0.92075687,  0.91498053,\n",
+       "        0.89659724,  0.84008568,  0.78308307,  0.77586108,  0.74835052,\n",
+       "        0.72796603,  0.70791987,  0.67316675,  0.66389788,  0.63665009,\n",
+       "        0.61408536,  0.58307404,  0.56916286,  0.54287948,  0.53851429,\n",
+       "        0.53220415,  0.50014204,  0.49626051,  0.47717274,  0.46665622,\n",
+       "        0.45328805,  0.43532197,  0.43112208,  0.41918914,  0.40554264,\n",
+       "        0.40147422,  0.38750104,  0.38306851,  0.37550485,  0.36649125,\n",
+       "        0.3524414 ,  0.34992323,  0.34790978,  0.34380652,  0.33198522,\n",
+       "        0.33098749,  0.32505638,  0.31454304,  0.31208772,  0.30121908,\n",
+       "        0.29515563,  0.29130454,  0.28747054,  0.28041961,  0.27566133,\n",
+       "        0.26988407,  0.26757407,  0.25699821,  0.25437095,  0.25144306,\n",
+       "        0.24641194,  0.24448138,  0.24110792,  0.2367612 ,  0.23333637,\n",
+       "        0.22988285,  0.2262658 ,  0.21950857,  0.21587979,  0.21265791,\n",
+       "        0.21054595,  0.20686208,  0.20106419,  0.19814683,  0.19438979,\n",
+       "        0.19263702,  0.18715531,  0.18587861,  0.18189445,  0.17907628,\n",
+       "        0.17450967,  0.17207252,  0.1700587 ,  0.16699332,  0.16410425])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thing['ev'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d9e99e13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thing = np.load('/user_data/mmhender/features/sketch_tokens/PCA/S1_PCA_grid5.npy', allow_pickle=True).item()\n",
+    "len(thing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a210e243",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1456"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(thing['scores'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "61efe824",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 384, 1456)\n"
+     ]
+    }
+   ],
+   "source": [
+    "fn = '/user_data/mmhender/features/alexnet/S1_Conv3_ReLU_reflect_features_each_prf_grid5.h5py'\n",
+    "with h5py.File(fn,'r') as data_set:\n",
+    "    dsize = data_set['/features'].shape\n",
+    "print(dsize)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
-   "id": "1e64f2f9",
+   "id": "3d5998b5",
    "metadata": {},
    "outputs": [
     {
@@ -38,10 +246,6 @@
     }
    ],
    "source": [
-    "import h5py\n",
-    "import time\n",
-    "import numpy as np\n",
-    "\n",
     "fn = '/user_data/mmhender/features/pyramid_texture/S1_features_each_prf_4ori_4sf_grid3.h5py'\n",
     "# fn = '/user_data/mmhender/features/sketch_tokens/S1_features_each_prf_grid4.h5py'\n",
     "t = time.time()\n",
@@ -59,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7f53e923",
+   "id": "a53103b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8e852c86",
+   "id": "cc7a273d",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "831beee2",
+   "id": "4f301527",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a992a3de",
+   "id": "8df54a98",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f54dd74d",
+   "id": "bb224094",
    "metadata": {},
    "outputs": [
     {
