--- a/notebooks/testing/test_semantic_discrim.ipynb
+++ b/notebooks/testing/test_semantic_discrim.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b98779a6",
+   "id": "04b14ba6",
    "metadata": {},
    "outputs": [
     {
@@ -12,20 +12,20 @@
      "text": [
       "Initializing coco api...\n",
       "loading annotations into memory...\n",
-      "Done (t=0.62s)\n",
+      "Done (t=0.75s)\n",
       "creating index...\n",
       "index created!\n",
       "loading annotations into memory...\n",
-      "Done (t=15.86s)\n",
+      "Done (t=20.45s)\n",
       "creating index...\n",
       "index created!\n",
       "Initializing coco api...\n",
       "loading annotations into memory...\n",
-      "Done (t=0.48s)\n",
+      "Done (t=0.55s)\n",
       "creating index...\n",
       "index created!\n",
       "loading annotations into memory...\n",
-      "Done (t=12.41s)\n",
+      "Done (t=14.93s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -64,7 +64,50 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "22c6796d",
+   "id": "1233f345",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'a' in 'b'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "12e46d96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53.033008588991066"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.sqrt((75**2)/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5c416c90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,10 +122,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "22916740",
+   "execution_count": 3,
+   "id": "aa902278",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Volume space: ROI defs are located at: /lab_data/tarrlab/common/datasets/NSD/nsddata/ppdata/subj01/func1pt8mm/roi\n",
+      "\n",
+      "3794 voxels of overlap between kastner and prf definitions, using prf defs\n",
+      "unique values in retino labels:\n",
+      "[-1.  0.  1.  2.  3.  4.  5.  6.  7.  8.  9. 10. 11. 12. 13. 14. 15. 16.\n",
+      " 17. 18. 19. 20. 21. 22. 23. 24. 25.]\n",
+      "unique values in face labels:\n",
+      "[-1.  0.  1.  2.  3.  5.]\n",
+      "unique values in place labels:\n",
+      "[-1.  0.  1.  2.  3.]\n",
+      "unique values in body labels:\n",
+      "[-1.  0.  1.  2.  3.]\n",
+      "1987 voxels are defined (differently) in both retinotopic areas and category areas\n",
+      "0 voxels are defined (differently) in both face areas and place areas\n",
+      "490 voxels are defined (differently) in both face areas and body areas\n",
+      "158 voxels are defined (differently) in both place areas and body areas\n",
+      "Including all voxels that are defined within nsdgeneral mask, in addition to roi labels.\n",
+      "\n",
+      "19738 voxels are defined across all areas, and will be used for analysis\n",
+      "\n",
+      "Loading numerical label/name mappings for all ROIs:\n",
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "['V1v', 'V1d', 'V2v', 'V2d', 'V3v', 'V3d', 'hV4']\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]\n",
+      "['V1v', 'V1d', 'V2v', 'V2d', 'V3v', 'V3d', 'hV4', 'VO1', 'VO2', 'PHC1', 'PHC2', 'TO2', 'TO1', 'LO2', 'LO1', 'V3B', 'V3A', 'IPS0', 'IPS1', 'IPS2', 'IPS3', 'IPS4', 'IPS5', 'SPL1', 'FEF']\n",
+      "[1, 2, 3, 4, 5]\n",
+      "['OFA', 'FFA-1', 'FFA-2', 'mTL-faces', 'aTL-faces']\n",
+      "[1, 2, 3]\n",
+      "['OPA', 'PPA', 'RSC']\n",
+      "[1, 2, 3, 4]\n",
+      "['EBA', 'FBA-1', 'FBA-2', 'mTL-bodies']\n",
+      "\n",
+      "Sizes of all defined ROIs in this subject:\n",
+      "Region V1 has 2392 voxels. Includes subregions:\n",
+      "['V1v', 'V1d']\n",
+      "Region V2 has 2096 voxels. Includes subregions:\n",
+      "['V2v', 'V2d']\n",
+      "Region V3 has 1674 voxels. Includes subregions:\n",
+      "['V3v', 'V3d']\n",
+      "Region hV4 has 721 voxels. Includes subregions:\n",
+      "['hV4']\n",
+      "Region VO1-2 has 482 voxels. Includes subregions:\n",
+      "['VO1', 'VO2']\n",
+      "Region PHC1-2 has 382 voxels. Includes subregions:\n",
+      "['PHC1', 'PHC2']\n",
+      "Region LO1-2 has 488 voxels. Includes subregions:\n",
+      "['LO2', 'LO1']\n",
+      "Region TO1-2 has 339 voxels. Includes subregions:\n",
+      "['TO2', 'TO1']\n",
+      "Region V3ab has 965 voxels. Includes subregions:\n",
+      "['V3B', 'V3A']\n",
+      "Region IPS0-5 has 2155 voxels. Includes subregions:\n",
+      "['IPS0', 'IPS1', 'IPS2', 'IPS3', 'IPS4', 'IPS5']\n",
+      "Region SPL1 has 164 voxels. Includes subregions:\n",
+      "['SPL1']\n",
+      "Region FEF has 72 voxels. Includes subregions:\n",
+      "['FEF']\n",
+      "Region OFA has 355 voxels\n",
+      "Region FFA-1 has 484 voxels\n",
+      "Region FFA-2 has 310 voxels\n",
+      "Region mTL-faces has 0 voxels\n",
+      "Region aTL-faces has 159 voxels\n",
+      "Region OPA has 1611 voxels\n",
+      "Region PPA has 1033 voxels\n",
+      "Region RSC has 566 voxels\n",
+      "Region EBA has 2971 voxels\n",
+      "Region FBA-1 has 396 voxels\n",
+      "Region FBA-2 has 430 voxels\n",
+      "Region mTL-bodies has 0 voxels\n",
+      "Loading data for sessions:\n",
+      "[1]\n",
+      "Data is located in: /lab_data/tarrlab/common/datasets/NSD/nsddata_betas/ppdata/subj01/func1pt8mm/betas_fithrf_GLMdenoise_RR...\n",
+      "Loading from /lab_data/tarrlab/common/datasets/NSD/nsddata_betas/ppdata/subj01/func1pt8mm/betas_fithrf_GLMdenoise_RR/betas_session01.nii.gz...\n",
+      "Raw data:\n",
+      "float64 -32768.0 32767.0 (750, 81, 104, 83)\n",
+      "Adjusted data (divided by 300):\n",
+      "float32 -109.22667 109.223335 (750, 699192)\n",
+      "z-scoring beta weights within this session...\n",
+      "mean = 1.242, sigma = 1.409\n",
+      "\n",
+      "Size of full data set [nTrials x nVoxels] is:\n",
+      "(750, 19738)\n"
+     ]
+    }
+   ],
    "source": [
     "# decide what voxels to use  \n",
     "voxel_mask, voxel_index, voxel_roi, voxel_ncsnr, brain_nii_shape = roi_utils.get_voxel_roi_info(subject, \\\n",
@@ -112,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5f973b19",
+   "id": "f75e2a56",
    "metadata": {},
    "outputs": [
     {
@@ -137,8 +270,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2543ef46",
+   "execution_count": 5,
+   "id": "f486afe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1f5e0d4e",
+   "id": "123c33c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b21149d",
+   "id": "2eab98ca",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "04293873",
+   "id": "e9236aac",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "241d2d34",
+   "id": "97b80042",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "b740473b",
+   "id": "99a01578",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "0992abf0",
+   "id": "6c4bb21a",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "5a4e88bf",
+   "id": "b5ffc767",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "c4d5d44b",
+   "id": "4e7def6d",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "ca8d5f4c",
+   "id": "99c8c106",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "9dfbfe39",
+   "id": "213a0f4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "273cd47a",
+   "id": "f2381b73",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "63d045ef",
+   "id": "9c6115ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "5adb802a",
+   "id": "86c7f603",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "cda2d97b",
+   "id": "372ccb0b",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "905f83f0",
+   "id": "648bc793",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "60264859",
+   "id": "ec1394a3",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "20447ac9",
+   "id": "f4a27f4f",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "34f1b096",
+   "id": "b4e83c0f",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "4fdf9d06",
+   "id": "935fb3bc",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "21d45656",
+   "id": "249de5ab",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "5930bfd4",
+   "id": "f6a51eb8",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "a107340c",
+   "id": "335a6397",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "a8d2c6c3",
+   "id": "009a0b24",
    "metadata": {},
    "outputs": [
     {
